Add basic styles

--- a/index.html
+++ b/index.html
@@ -2,28 +2,27 @@
 <html lang="ru" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Кандидат в Губернаторы Санкт-Петербурга Красимир Врански
-</title>
+    <link rel="stylesheet" href="./normalize.css">
+    <link rel="stylesheet" href="./main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Кандидат в Губернаторы Санкт-Петербурга Красимир Врански</title>
   </head>
   <body>
     <header>
-    <a href="https://vk.com/vranski_team
+      <h1>Кандидат в Губернаторы Санкт-Петербурга Красимир Врански</h1>
+      <img src="logo.svg" width="100%" alt="image">
 
-">VK</a>
-      <a href="https://www.instagram.com/vranski/">I</a>
-      <a href="https://www.facebook.com/vranskiteam/">FB</a>
-      <a href="https://t.me/vranski_team">T</a>
     </header>
     <nav>
-      <a>Главная</a>
-      <a>О кандидате</a>
-      <a>Манифест</a>
-      <a>Программа</a>
+      <a href="#">Главная</a>
+      <a href="#about">О кандидате</a>
+      <a href="#manifest">Манифест</a>
+      <a href="#program">Программа</a>
     </nav>
     <section class="slider">
       slider
     </section>
-    <section class="about">
+    <section id="about">
       <p>
         Меня зовут Красимир Врански, я петербуржец, и у меня есть мечта. Я вижу наш город красивым, зелёным и безопасным. Я вижу город с удобным общественным транспортом, который ходит часто и по расписанию, где люди не стоят в часовых пробках. Город с чистыми широкими тротуарами. Город тенистых парков и зелёных дворов, где приятно прогуляться и солнечным летом, и под покровом зимних облаков. Город, где легко растить детей и заниматься спортом. Город, где не страшно заболеть, потому что легко получить медицинскую помощь, а среда проживания доступна для всех.
       </p>
@@ -47,7 +46,7 @@
 </p>
 
     </section>
-    <section class="manifest">
+    <section id="manifest">
       <h2>Проблемы города</h2>
       <p>Власть не представляет народ и не умеет эффективно и компетентно управлять городом.
       Они живут в роскошных коттеджах за высокими заборами, а мы -- в городе, где
@@ -108,8 +107,12 @@
     <section class="motifations">
 
     </section>
+
     <footer>
-      footer
+      <a href="https://vk.com/vranski_team">VK</a>
+        <a href="https://www.instagram.com/vranski/">I</a>
+        <a href="https://www.facebook.com/vranskiteam/">FB</a>
+        <a href="https://t.me/vranski_team">T</a>
     </footer>
   </body>
 </html>
