--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
     <footer>
         <h3>Присоединяйтесь к команде Красимира Врански!</h3>
         <p>Вместе мы вернем власть петербуржцам!</p>
+        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='thanks.html';}"></iframe>
         <h4>Будьте в курсе!</h4>
         <nav class="socials">
             <a href="https://vk.com/vranski_team">
