--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="./normalize.css">
     <link rel="stylesheet" href="./main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
+
     <title>Кандидат в Губернаторы Санкт-Петербурга Красимир Врански</title>
 </head>
 
@@ -24,7 +27,26 @@
         <a href="#program">Программа</a>
     </nav>
     <section class="slider">
-        slider
+      <!-- Slider main container -->
+      <div class="swiper-container">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide"><img width="100%" src="./images/1.jpg" /></div>
+              <div class="swiper-slide"><img width="100%" src="./images/2.jpg" /></div>
+              <div class="swiper-slide"><img width="100%" src="./images/3.jpg" /></div>
+              <div class="swiper-slide"><img width="100%" src="./images/4.jpg" /></div>
+          </div>
+          <!-- If we need pagination -->
+          <div class="swiper-pagination"></div>
+
+          <!-- If we need navigation buttons -->
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+
+          <!-- If we need scrollbar -->
+          <div class="swiper-scrollbar"></div>
+      </div>
     </section>
     <section id="about">
         <p>
@@ -104,8 +126,10 @@
     <footer>
         <h3>Присоединяйтесь к команде Красимира Врански!</h3>
         <p>Вместе мы вернем власть петербуржцам!</p>
-        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='thanks.html';}"></iframe>
         <h4>Будьте в курсе!</h4>
+        <button onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform', 'blank')">
+          Заполни форму волонтера
+        </button>
         <nav class="socials">
             <a href="https://vk.com/vranski_team">
                 <svg role="img" viewBox="0 0 24 24" width="48" height="48" xmlns="http://www.w3.org/2000/svg">
@@ -135,6 +159,29 @@
             </a>
         </nav>
     </footer>
+    <script>
+  var mySwiper = new Swiper ('.swiper-container', {
+    // Optional parameters
+    direction: 'horizontal',
+    loop: true,
+
+    // If we need pagination
+    pagination: {
+      el: '.swiper-pagination',
+    },
+
+    // Navigation arrows
+    navigation: {
+      nextEl: '.swiper-button-next',
+      prevEl: '.swiper-button-prev',
+    },
+
+    // And if we need scrollbar
+    scrollbar: {
+      el: '.swiper-scrollbar',
+    },
+  })
+  </script>
 </body>
 
 </html>
