--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 
 <body>
     <header>
-        <img class="logo" src="logo.svg" alt="Эмблема">
+        
         <h1>
-          <span class="top">Кандидат в Губернаторы Санкт-Петербурга</span>
+          <span class="top">Кандидат в Губернаторы <nobr>Санкт-Петербурга</nobr></span>
+          <img class="logo" src="./icons/logo.svg" alt="Эмблема">
           <span class="bottom">Красимир Врански</span>
         </h1>
     </header>
@@ -54,12 +55,14 @@
         </p>
         <p>
             7 лет Красимир помогает горожанам решать проблемы городской среды
-            <a href="http://xn--80accfiasjf8cghbfut2k.xn--p1ai/about">35 000 проблем</a> Удалось решить Красимиру вместе с соратниками
+            <a href="http://xn--80accfiasjf8cghbfut2k.xn--p1ai/about">35 000 проблем</a> удалось решить Красимиру вместе с соратниками
 
         </p>
-        <h2>Масштабные проекты, основанные Красимиром Врански
-</h2>
-        <p>50 000 петербуржцев Объединились в рамках движения “Красивый Петербург”, чтобы решать проблемы города 15 000 кедров Посажено в рамках кампании по озеленению города 70 парков города Защищены от застройки и вырубки движением “Зеленая коалиция” 50 км велодорожек Проложено благодаря деятельности велокоалиции
+        <h2>Масштабные проекты, основанные Красимиром Врански</h2>
+        <p>50 000 петербуржцев Объединились в рамках  <nobr> движения <a href="http://vk.com/peterburg_krasiv">“Красивый Петербург”</a></nobr>, чтобы решать проблемы города</p>
+        <p> 15 000 кедров Посажено в рамках кампании по озеленению города</p>
+        <p> 70 парков города Защищены от застройки и вырубки  <nobr> движением <a href="https://vk.com/greencospb">“Зеленая коалиция”</a></nobr> </p>
+            <p>50 км велодорожек Проложено благодаря деятельности <a href="https://www.youtube.com/watch?v=nlf0RdfIVyw">велокоалиции</a>
         </p>
 
     </section>
@@ -127,8 +130,8 @@
         <h3>Присоединяйтесь к команде Красимира Врански!</h3>
         <p>Вместе мы вернем власть петербуржцам!</p>
         <h4>Будьте в курсе!</h4>
-        <button onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform', 'blank')">
-          Заполни форму волонтера
+        <button class="action" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform', 'blank')">
+          Заполните форму волонтера
         </button>
         <nav class="socials">
             <a href="https://vk.com/vranski_team">
