--- a/index.html
+++ b/index.html
@@ -67,7 +67,14 @@
 
     </section>
     <section id="manifest">
-        <h2>Проблемы города</h2>
+        <h2>Манифест</h2>
+        <p>Меня зовут Красимир Христов Врански, я петербуржец, и я собираюсь стать губернатором. Я не политик. Просто я здесь живу. И меня достало!
+        <p>Меня достало, что нет удобного общественного транспорта и нормальных парковок. Меня достало, что вырубают последние деревья, последние скверы и парки ради никому не нужной уплотнительной застройки. Меня достало, что десятилетиями не могут построить детские сады, поликлиники, школы, даже элементарные детские площадки!</p>
+        <p>Как и вам, мне надоело, что в городе грязь и мусор, ямы на дорогах и гигантские лужи. Мне надоело, что власти не могут убрать снег, не могут почистить тротуары, а где-то этих тротуаров нет вообще. Есть места, где даже молодому здоровому человеку пройти трудно! А как тому, кто с палочкой, с коляской – или на коляске?</p>
+        <p>Я никогда не интересовался политикой. Меня волнует то же, что и вас: мой дом. А мой дом – это моя квартира, подъезд, двор, улица, мой город. Мой город – это мой дом; наш город – это наш дом!</p>
+        <p>Я хочу, чтобы он был красивым, зелёным и безопасным. Чтобы в нём не надо было стоять в часовых пробках. Я хочу город тенистых парков и зелёных дворов, где приятно гулять. Город, где легко растить детей и заниматься спортом. Город, где не страшно заболеть, потому что легко получить медицинскую помощь, а среда проживания доступна для всех.</p>
+        <p>Я знаю, многие из вас разделяют это видение. Мы все хотим одного и того же. И мы все понимаем, что это будущее могло бы быть реальностью уже сейчас, ведь у Петербурга есть всё, что для этого нужно: отзывчивые и трудолюбивые жители; великая, пусть иногда и трагическая история; уникальная архитектура; богатая культура.</p>
+        <h3>Что же нам мешает?</h3>
         <p>Власть не представляет народ и не умеет эффективно и компетентно управлять городом. Они живут в роскошных коттеджах за высокими заборами, а мы -- в городе, где
         </p>
         <ol>
@@ -103,8 +110,9 @@
 
     </section>
     <section id="program">
-        <h2>Чего мы хотим добиться?
-      </h2>
+        <h2>Программа</h2>
+        <h3>Чего мы хотим добиться?
+            </h3>
         <p>Диалога! Давайте разговаривать! Чиновники обязаны слушать людей. Власть обязана общаться с бизнесом. Бизнес должен говорить с простыми жителями. Разобщённость губит наше общество. Желание говорить, понимать и договариваться – двигает всех нас вперед!
         </p>
         <p>
@@ -118,6 +126,9 @@
                 <li>в прозрачной системе не получится осваивать бюджетные средства в собственный карман.</li>
             </ol>
         </p>
+        <a href="https://docs.google.com/document/d/13VXM_30P8PLDVO6LvYVcQv-n7hTKrFiNpcmCFXPrKJ0/edit?usp=sharing">
+            Более подробно
+        </a>
     </section>
     <section class="actions">
 
