--- a/about/index.html
+++ b/about/index.html
@@ -27,19 +27,10 @@
       <a href="#">О кандидате</a>
       <a href="../manifest">Манифест</a>
       <a href="../program">Программа</a>
+      <a href="#join">Присоединяйтесь</a>
     </nav>
 
     <section id="about">
-      <p>
-        Меня зовут Красимир Врански, я петербуржец, и у меня есть мечта. Я вижу
-        наш город красивым, зелёным и безопасным. Я вижу город с удобным
-        общественным транспортом, который ходит часто и по расписанию, где люди
-        не стоят в часовых пробках. Город с чистыми широкими тротуарами. Город
-        тенистых парков и зелёных дворов, где приятно прогуляться и солнечным
-        летом, и под покровом зимних облаков. Город, где легко растить детей и
-        заниматься спортом. Город, где не страшно заболеть, потому что легко
-        получить медицинскую помощь, а среда проживания доступна для всех.
-      </p>
       <p>
         7 лет Красимир помогает горожанам решать проблемы городской среды
         <a href="http://xn--80accfiasjf8cghbfut2k.xn--p1ai/about"
@@ -74,7 +65,7 @@
     <footer>
       <h3>Присоединяйтесь к команде Красимира Врански!</h3>
       <p>Вместе мы вернем власть петербуржцам!</p>
-      <h4>Будьте в курсе!</h4>
+      <h4 id="join">Будьте в курсе!</h4>
       <button
         class="action"
         onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform', 'blank')"
