--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <a href="./about">О кандидате</a>
       <a href="./manifest">Манифест</a>
       <a href="./program/">Программа</a>
+      <a href="#join">Присоединяйтесь</a>
     </nav>
     <section class="slider">
       <!-- Slider main container -->
@@ -33,6 +34,9 @@
         <div class="swiper-wrapper">
           <!-- Slides -->
           <div class="swiper-slide">
+            <img width="100%" src="./images/4.jpg" />
+          </div>
+          <div class="swiper-slide">
             <img width="100%" src="./images/1.jpg" />
           </div>
           <div class="swiper-slide">
@@ -40,9 +44,6 @@
           </div>
           <div class="swiper-slide">
             <img width="100%" src="./images/3.jpg" />
-          </div>
-          <div class="swiper-slide">
-            <img width="100%" src="./images/4.jpg" />
           </div>
         </div>
         <!-- If we need pagination -->
@@ -56,11 +57,30 @@
         <div class="swiper-scrollbar"></div>
       </div>
     </section>
-
+    <section>
+      <p>
+        Меня зовут Красимир Врански, я петербуржец, и у меня есть мечта.
+      </p>
+      <p>Я вижу наш город красивым, зелёным и безопасным.</p>
+      <p>
+        Я вижу город с удобным общественным транспортом, который ходит часто и
+        по расписанию, где люди не стоят в часовых пробках.
+      </p>
+      <p>Город с чистыми широкими тротуарами.</p>
+      <p>
+        Город тенистых парков и зелёных дворов, где приятно прогуляться и
+        солнечным летом, и под покровом зимних облаков.
+      </p>
+      <p>Город, где легко растить детей и заниматься спортом.</p>
+      <p>
+        Город, где не страшно заболеть, потому что легко получить медицинскую
+        помощь, а среда проживания доступна для всех.
+      </p>
+    </section>
     <footer>
       <h3>Присоединяйтесь к команде Красимира Врански!</h3>
       <p>Вместе мы вернем власть петербуржцам!</p>
-      <h4>Будьте в курсе!</h4>
+      <h4 id="join">Будьте в курсе!</h4>
       <button
         class="action"
         onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform', 'blank')"
