--- a/manifest/index.html
+++ b/manifest/index.html
@@ -27,9 +27,10 @@
       <a href="../about">О кандидате</a>
       <a href="#">Манифест</a>
       <a href="../program">Программа</a>
+      <a href="#join">Присоединяйтесь</a>
     </nav>
 
-    <section id="manifest">
+    <section>
       <h2>Манифест</h2>
       <p>
         Меня зовут Красимир Христов Врански, я петербуржец, и я собираюсь стать
@@ -143,7 +144,7 @@
     <footer>
       <h3>Присоединяйтесь к команде Красимира Врански!</h3>
       <p>Вместе мы вернем власть петербуржцам!</p>
-      <h4>Будьте в курсе!</h4>
+      <h4 id="join">Будьте в курсе!</h4>
       <button
         class="action"
         onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform', 'blank')"
