--- a/program/index.html
+++ b/program/index.html
@@ -27,6 +27,7 @@
       <a href="../about">О кандидате</a>
       <a href="../manifest/">Манифест</a>
       <a href="#">Программа</a>
+      <a href="#join">Присоединяйтесь</a>
     </nav>
 
         
@@ -55,7 +56,7 @@
     <footer>
       <h3>Присоединяйтесь к команде Красимира Врански!</h3>
       <p>Вместе мы вернем власть петербуржцам!</p>
-      <h4>Будьте в курсе!</h4>
+      <h4 id="join">Будьте в курсе!</h4>
       <button
         class="action"
         onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform', 'blank')"
