--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="./styles/swiper.css" />
     <script src="./js/swiper.min.js"></script>
     <title>Кандидат в Губернаторы Санкт-Петербурга Красимир Врански</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-137901963-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-137901963-1");
+    </script>
   </head>
 
   <body>
