--- a/program/index.html
+++ b/program/index.html
@@ -10,6 +10,17 @@
     <title>
       Кандидат в Губернаторы Санкт-Петербурга Красимир Врански | Программа
     </title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137901963-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-137901963-1');
+</script>
+
+
   </head>
 
   <body>
