Update slider section

--- a/index.html
+++ b/index.html
@@ -40,6 +40,26 @@
       <a href="#join">Присоединяйтесь</a>
     </nav>
     <section class="slider">
+      <div class="slider-description">
+        <p>
+          Меня зовут Красимир Врански, я один из создателей движения "Красивый
+          Петербург" и "Зеленая коалиция". 7 лет я помогаю гражданам решать
+          проблемы городской среды. За эти годы вместе с соратниками удалось
+          решить 35 000 проблема города <a href="about/">подробнее...</a>
+        </p>
+        <div class="call-to-action">
+          <button
+            class="action"
+            onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform', 'blank')"
+          >
+            Поддержать Красимира
+          </button>
+          <small>
+            Оставьте свои контакты, если вы хотите поставить подпись за
+            выдвижение или стать волонтером
+          </small>
+        </div>
+      </div>
       <!-- Slider main container -->
       <div class="swiper-container">
         <!-- Additional required wrapper -->
