Add photo for mobile view

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <h1>
         Кандидат в Губернаторы <nobr>Санкт-Петербурга</nobr>
         <nobr>Красимир Врански</nobr>
+        <img src="images/main.jpeg" class="main-photo">
       </h1>
       <nav class="menu">
           <a href="#">Главная</a>
