--- a/about/index.html
+++ b/about/index.html
@@ -27,22 +27,77 @@
   <body>
     <header>
       <h1>
-        <span class="top"
-          >Кандидат в Губернаторы <nobr>Санкт-Петербурга</nobr></span
-        >
-        <img class="logo" src="../icons/logo.svg" alt="Эмблема" />
-        <span class="bottom">Красимир Врански</span>
+        Кандидат в Губернаторы <nobr>Санкт-Петербурга</nobr>
+        <nobr>Красимир Врански</nobr>
+        <img src="../images/main.jpeg" class="main-photo" />
       </h1>
+      <nav class="menu">
+        <a href="#">Главная</a>
+        <a href="./about">О кандидате</a>
+        <a href="./manifest">Манифест</a>
+        <a href="./program/">Программа</a>
+        <a href="./results/">Результаты</a>
+        <!-- <a href="#join">Поддержать</a> -->
+      </nav>
     </header>
-    <nav class="menu">
-      <a href="/">Главная</a>
-      <a href="#">О кандидате</a>
-      <a href="../manifest">Манифест</a>
-      <a href="../program">Программа</a>
-      <a href="#join">Присоединяйтесь</a>
-    </nav>
-
     <section id="about">
+      <h2>Биография</h2>
+      <h3>Красимир Христов Врански</h3>
+      <p>Родился 19 декабря 1981 года в городе Стара Загора, Болгария.</p>
+      <p>В 1988 году пошел в 1-ый класс в городе Тирасполе, Молдавская ССР.</p>
+      <p>
+        В 1989-91 годах учился в городе Стара Загора, Болгария, в школе «Максим
+        Горький» (русская гимназия).
+      </p>
+      <p>
+        В 1991-94 учился в средней школе №250 Кировского района
+        Санкт-Петербурга.
+      </p>
+      <p>
+        В 1994-99 продолжил обучение в школе «Максим Горький» в городе Стара
+        Загора, Болгария.
+      </p>
+      <p>
+        В 1999 поступил в институт в городе Пловдив, Болгария на специальность
+        русская филология.
+      </p>
+      <p>
+        В 2002 году поступил в Технологический университет Санкт-Петербурга на
+        специальность менеджмент организации.
+      </p>
+      <p>
+        В 2000 поступил в институт в городе Свиштов, Болгария, на специальность
+        экономика.
+      </p>
+      <p>
+        В 2005, закончив 4 курса Технологического университета, прекратил
+        обучение.
+      </p>
+      <p>
+        С 2005 по 2007 проживал в Болгарии, работал торговым представителем в
+        «Джи-би-си трейдинг» — компании, изготавливающей строительные смеси и
+        теплоизоляционные системы.
+      </p>
+      <p>В 2008 окончательно вернулся в Санкт-Петербург.</p>
+      <p>
+        С 2008 по 2010 работал в ООО «Гамма-трейд-ольвекс» логистом и менеджером
+        по продажам.
+      </p>
+      <p>
+        С 2010 по 2011 работал в Логистической компании на должности логиста.
+      </p>
+      <p>С 2011 по 2012 в «Би-джи групп» логистом.</p>
+      <p>С 2012 работал фрилансером.</p>
+      <p>С 2015 по февраль 2019 работал сотрудником ТСЖ «Манхэттен».</p>
+      <p>
+        В 2012 году занялся общественной деятельностью, начав с наблюдения на
+        выборах в Санкт-Петербурге; позже участвовал в наблюдении за выборами в
+        разных городах, от Омска до Жироны (Франция).
+      </p>
+      <p>
+        В 2012 году основал движение «Красивый Петербург» для решения проблем
+        городской среды.
+      </p>
       <p>
         7 лет Красимир помогает горожанам решать проблемы городской среды
         <a href="http://xn--80accfiasjf8cghbfut2k.xn--p1ai/about"
@@ -60,6 +115,7 @@
           ></nobr
         >, чтобы решать проблемы города
       </p>
+      <p>объединить более 50 000 неравнодушных петербуржцев</p>
       <p>15 000 кедров Посажено в рамках кампании по озеленению города</p>
       <p>
         70 парков города Защищены от застройки и вырубки
@@ -71,6 +127,37 @@
       <p>
         50 км велодорожек Проложено благодаря деятельности
         <a href="https://www.youtube.com/watch?v=nlf0RdfIVyw">велокоалиции</a>
+      </p>
+      <p>
+        Наше движение провело десятки опросов о том, как сделать город лучше.
+      </p>
+      <p>
+        Результаты видны на практике: Сенная площадь (частично реализован),
+        Мытнинская набережная (частично реализован), парк Александрино,
+        Южно-Приморский парк, улица Большая морская.
+      </p>
+      <p>
+        В 2013 году основал проект «Петербургский гражданин». Это объединение
+        активистов Петербурга для решения и популяризации общественно значимых
+        идей и проектов. С 2014 года «Петербургский гражданин» проводит
+        ежегодный конкурс среди наиболее активных горожан, которые реально
+        решают проблемы петербуржцев, чтобы отметить их вклад в развитие города.
+      </p>
+      <p>
+        В 2017 году организовал медиапроект «Кирпич» в помощь гражданским
+        инициативам с трансляцией мероприятий.
+      </p>
+      <p>
+        В 2017 году основал «Зеленую коалицию Петербурга», объединяющую 40
+        инициативных групп и движений по сохранению 70 зеленых территорий
+        города. За 2018 год удалось спасти 16 парков и скверов, в том числе Парк
+        Интернационалистов, Дёминский сад, сквер на Савушкина, территории вдоль
+        пр. Маршала Блюхера и много других.
+      </p>
+      <p>
+        В 2017 году стал соорганизатором кампании в защиту прав предпринимателей
+        и по борьбе с незаконной торговлей. Проведены десятки рейдов по
+        выявлению и пресечению незаконной и опасной торговли.
       </p>
     </section>
 
